From 701920e (test):
===================

In tests/test_vectorInvariants.py,

(*) Rename test_pol_advariants_multiple_loops() to 
test_pol_advariants_multiple_loops_old()
(*) Modify test_pol_advariants_multiple_loops() with a new test using
new pytest fixtures in tests/conftest.py

In tests/conftest.py,

(*) Add pytest fixtures element_pairs, example_ids_strings, pol_xc, 
pol_xc_lol, and pol_advariant_loops

In examples/vector_invariants.ipynb,

(*) Minor bug fix of variable name

From 459abce (test):
===================

In tests/conftest.py,

(*) Add one more id in fixtures example_ids and example_ids_strings

In tests/test_graphUtils.py,

(*) Update test_generate_triangles_valid_strings() and 
test_generate_triangles_valid()

From 36dc67c (examples):
=======================

In examples/vector_invariants.ipynb,

(*) Add verification of scale factors

From 464e51c (examples):
=======================

In examples/, 

(*) Add vector_invariants.ipynb to repo
(*) Add __init__.py to repo

From f111826 (scalar):
=====================

In tests/test_scalarInvariants.py,

(*) Add tests for function invariants_from_advariants_method1()
checking invariance

In tests/conftest.py,

(*) Add pytest fixture copol_complex_gains()

From 295912a (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function invariants_from_advariants_method1() with 
docstring and example

In tests/test_scalarInvariants.py,

(*) Add tests for function invariants_from_advariants_method1()
checking shape and type exceptions

From 7de39c9 (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function advariants_multiple_loops() with docstring 
and example

In tests/conftest.py,

(*) Add some fixtures for scalar advariant tests

In tests/test_scalarInvariants.py,

(*) Add tests for advariants on lists of correlations on loops

In tests/test_vectorInvariants.py,

(*) Minor updates

From 53b6e54 (scalar):
=====================
